<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HMSI Tel-U</string>
    <string name="action_settings">Settings</string>
    <string name="action_resfresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >News</item>
        <item >Announcement</item>
        <item >File Sharing</item>
        <item >Profil</item>
        <item >About</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_people</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Content Profil -->
    <string name="title_profil">Himpinan Mahasiswa Sistem Informasi Tel-U</string>
	<string name="desc_himpunan">HMSI adalah himpunan yang berada dibawah Prodi Sistem Informasi
	   . Himpunan sebagai wadah aspirasi mahasiswa sistem informasi</string>
	<string name="title_visi">Visi Himpunan</string>
	<string name="desc_visi">Visi HMSI Unitel adalah menjadi wadah kesatuan 
	    organisasi mahasiswa Sistem Informasi seluruh Indonesia 
	    yang bertujuan untuk melahirkan mahasiswa Sistem Informasi 
	    yang berwawasan IPTEK dan IMTAQ serta profesional dibidangnya.</string>
	<string name="title_misi">Misi Himpunan</string>
	    <string name="desc_misi0">Misi HMSI Unitel, yaitu:</string>
	    <string name="desc_misi1">1. Menjalin komunikasi dan mempererat silaturahmi mahasiswa Sistem Informasi dan membangun jaringan antara anggota 
	        dan alumni dalam rangka meningkatan penguasaan IPTEK dan profesionalisme Sistem Informasi.</string>
	    <string name="desc_misi2">2. Meningkatkan peran HMSI Unitel agar menjadi organisasi kemahasiswaan yang menuju basis keprofesian dengan memantapkan 
	        keberadaan organisasi di kalangan anggota, masyarakat, pemerintah dan industri.</string>
	    <string name="desc_misi3">3. Mengembangkan sikap ilmiah dan sikap keahlian atau arah profesi mahasiswa melalui kegiatan dan tradisi ilmiah 
	    dalam bidang IPTEK agar mampu berperan aktif dalam pembangunan nasional.</string>
	    <string name="desc_misi4">4. Mengembangkan organisasi sebagai wadah koordinasi kegiatan dan forum komunikasi untuk mewujudkan partisipasi mahasiswa dalam pengabdian masyarakat dan 
	        pembangunan sesuai dengan ilmu Sistem Informasi.</string>
    
</resources>
