<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
         <ImageView android:layout_width="300px"
        android:layout_height="300px"
        android:src="@drawable/hmsi"
        android:layout_gravity="center_horizontal"
        />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="25px">
        
 
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title_profil"
                    android:textStyle="bold"
        />

      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_himpunan"
        />
    
         <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title_visi"
                    android:textStyle="bold"
        />

      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_visi"
        />
      
             <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title_misi"
                    android:textStyle="bold"
        />

      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_misi0"
        />
      
            <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_misi1"
        />
    
            <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_misi2"
        />
            
            
                 <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_misi3"
        />
                 
                      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_misi4"
        />
      
   
                      
      </LinearLayout>
        
        
        </ScrollView>


</LinearLayout>
